--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     width: 100%;
     height: 100vh;
     /* Full height */
-    background-image: url('images/hero_bg_clean.png');
+    background-image: url('assets/hero_bg_clean.png');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -178,8 +178,8 @@ body {
     width: 32px;
     height: 32px;
     background-color: var(--accent-primary);
-    -webkit-mask-image: url('images/shoe_icon_final.png');
-    mask-image: url('images/shoe_icon_final.png');
+    -webkit-mask-image: url('assets/shoe_icon_final.png');
+    mask-image: url('assets/shoe_icon_final.png');
     -webkit-mask-size: contain;
     mask-size: contain;
     -webkit-mask-repeat: no-repeat;
