--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     width: 100%;
     height: 100vh;
     /* Full height */
-    background-image: url('assets/hero_bg_clean.png');
+    background-image: url('images/hero_bg_clean.png');
     background-size: cover;
     background-position: center;
     position: relative;
